fix: coment z-index

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ section{
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 1000;
+    /* z-index: 1000; */
 }
 
 #whatsapp-button img {
